
* NameError

  * NameError#initialize accepts :receiver option to set receiver in Ruby code. [Feature #14313]

* NoMethodError

  * NoMethodError#initialize accepts :receiver option to set receiver in Ruby code. [Feature #14313]

* Proc

  * Proc#call doesn't change $SAFE any more. [Feature #14250]

* Random

  * New methods:

    * added Random.bytes. [Feature #4938]

=== Stdlib updates (outstanding ones only)

* ERB

  * Add :trim_mode and :eoutvar keyword arguments to ERB.new. Now non-keyword arguments other than first one
    are softly deprecated and will be removed when Ruby 2.5 becomes EOL. [Feature #14256]

  * erb command's -S option is deprecated, which will be removed in the next version.

* FileUtils

  * New method:

    * FileUtils#cp_lr [Feature #4189]

* Matrix

  * New method:

    * Matrix#antisymmetric?

* Set

  * Aliased methods:

    * Set#filter! is a new alias for Set#select! [Feature #13784]

=== Compatibility issues (excluding feature bug fixes)

=== Stdlib compatibility issues (excluding feature bug fixes)

=== C API updates

=== Supported platform changes

=== Implementation improvements

* Speedup `Proc#call` because we don't need to care about `$SAFE` any more. [Feature #14318]
  With `lc_fizzbuzz` benchmark which uses so many `Proc#call` we can measure
  x1.4 improvements [Bug #10212].

* Speedup `block.call` where `block` is passed block parameter. [Feature #14330]
  Ruby 2.5 improves block passing performance. [Feature #14045]
  Additionally, Ruby 2.6 improves the performance of passed block calling.

* Introduce an initial implementation of JIT (Just-in-time) compiler. [Feature #14235] [experimental]
  * `--jit` option is added to enable JIT. `--jit-verbose=1` is good for inspection. See `ruby --help` for others.
  * This JIT relies on C compiler used to build Ruby, on runtime. Only gcc and clang are supported for the JIT
    for now, and MinGW support has some issues.